--- a/css/style-GENERATED.css
+++ b/css/style-GENERATED.css
@@ -2451,6 +2451,7 @@ table {
 
 table caption {
     --text-hyphenation: none;
+    --text-alignment: center;
 
     padding: 0.25em 0.75em;
     font-style: italic;
